feat: In create-originals maintenance action update AssetInfo, and create originalFilename using a provided mapping (#52)
Add functionality to create originals maintenance action:
* Allow to provide a mapping for known original filenames to be provided
in the request, e.g:
```
[
  {
    "internalFilename": "Lsj7J5Gw6MV-EtJpzzU3rK2.jpx",
    "originalFilename": "F125-1.jpg"
  },
  {
    "internalFilename": "LLXfA72a5ow-DQvACxkUXKG.jpx",
    "originalFilename": "1037335.tif"
  },
]
```

* If the mapping contains a known image format for the `originalFilename
`then we recreate the original from the provided format if sipi support
this otherwise use `tif`
* Update the `*.info` file when recreating the originals

The mapping can be created using a SPARQL query:
```
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX beol: <http://www..knora.org/ontology/0801/beol#>
PREFIX knora-api: <http://www.knora.org/ontology/knora-base#>
SELECT ?internalFilename ?originalFilename WHERE {
  ?resource knora-api:attachedToProject <http://rdfh.ch/projects/yTerZGyxjZVqFMNNKXCDPF> .
  ?resource knora-api:hasStillImageFileValue ?imageValue .
  ?imageValue knora-api:originalFilename ?originalFilename .
  ?imageValue knora-api:internalFilename ?internalFilename .
} ORDER BY ASC(LCASE(?internalFilename))
```
Downloading this as csv and convert it to json.

`ListProjectEndpoint` change:
* Simplify response to be an array
* Use name `id` for the `shortcode` field for the `ProjectResponse`
* Update open api yml
* Use the `ContentRange` header in order to indicate the total number of
resources in the collection.
